chore: remove livekit content

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -208,12 +208,12 @@ layout: index.swig
                     <li><a href="chatkit-ios.html">iOS</a></li>
                   </ul>
                 </li>
-                <li> <span>直播＋聊天解决方案 LiveKit 使用指南</span>
+                <!-- <li> <span>直播＋聊天解决方案 LiveKit 使用指南</span>
                   <ul class="list-unstyled tags">
                     <li><a href="livekit-android.html">Android</a></li>
                     <li><a href="livekit-ios.html">iOS</a></li>
                   </ul>
-                </li>
+                </li> -->
               </ul>
             </div>
             <div class="section-content col-xs-12 col-sm-6 col-md-6">
