chore: renaming IM

--- a/templates/pages/faq_list.html
+++ b/templates/pages/faq_list.html
@@ -176,7 +176,7 @@
           <li><a href="faq.html#client_open___操作为什么没有被调用_">client.open() 操作为什么没有被调用</a></li>
           <li><a href="faq.html#Anroid_设备每次启动时_installationId_为什么总会改变_如何才能不改变_">Anroid 设备每次启动时，installationId 为什么总会改变如何才能不改变</a></li>
           <li><a href="leanstorage_guide-android.html#手机号码登录">如何先验证手机号码再注册</a></li>
-          <li><a href="realtime_v2.html#Android-设备系统时间不准，会影响实时通信服务吗？">Android 设备系统时间不准，会影响实时通信服务吗</a></li>
+          <li><a href="realtime_v2.html#Android-设备系统时间不准，会影响即时通信服务吗？">Android 设备系统时间不准，会影响即时通信服务吗</a></li>
         </ul>
       </div>
     </div>
