--- a/templates/include/doc-nav.html
+++ b/templates/include/doc-nav.html
@@ -8,7 +8,7 @@
             <li><a href="storage_overview.html">数据存储服务总览</a></li>
             <li><a href="leanengine_overview.html">云引擎总览</a></li>
             <li><a href="push_guide.html">消息推送服务总览</a></li>
-            <li><a href="realtime_v2.html">实时通信服务总览</a></li>
+            <li><a href="realtime_v2.html">即时通信服务总览</a></li>
             <li><a href="dashboard_guide.html">控制台使用指南</a></li>
             <li><a href="data_security.html">数据安全</a></li>
             <li><a href="error_code.html">错误码详解</a></li>
@@ -26,7 +26,7 @@
             <li><a href="ios_push_guide.html">消息推送开发指南</a></li>
             <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="realtime_guide-objc.html">实时通信开发指南</a></li>
+            <li><a href="realtime_guide-objc.html">即时通信开发指南</a></li>
             <li><a href="chatkit-ios.html">ChatKit 使用指南</a></li>
             <li><a href="livekit-ios.html">LiveKit 使用指南</a></li>
             <li role="separator" class="divider"></li>
@@ -56,7 +56,7 @@
             <li><a href="livequery-guide.html">LiveQuery 开发指南</a></li>
             <li><a href="android_push_guide.html">消息推送开发指南</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="realtime_guide-android.html">实时通信开发指南</a></li>
+            <li><a href="realtime_guide-android.html">即时通信开发指南</a></li>
             <li><a href="chatkit-android.html">ChatKit 使用指南</a></li>
             <li><a href="livekit-android.html">LiveKit 使用指南</a></li>
             <li role="separator" class="divider"></li>
@@ -80,7 +80,7 @@
             <li><a href="weapp.html">小程序 / 小游戏开发指南</a></li>
             <li><a href="leanstorage_guide-js.html#Push_通知">消息推送开发指南</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="realtime_guide-js.html">实时通信开发指南</a></li>
+            <li><a href="realtime_guide-js.html">即时通信开发指南</a></li>
             <li><a href="relation-guide.html">数据模型设计指南</a></li>
             <li><a href="acl-guide.html">ACL 权限管理指南</a></li>
             {% if node != 'qcloud' and node != 'us' %}
@@ -90,7 +90,7 @@
             <!-- <li><a href="js_faq.html">FAQ</a></li> -->
             <li role="separator" class="divider"></li>
             <li><a href="https://leancloud.github.io/javascript-sdk/docs/" target="_blank">数据存储 SDK API</a></li>
-            <li><a href="https://leancloud.github.io/js-realtime-sdk/docs/" target="_blank">实时通信 SDK API</a></li>
+            <li><a href="https://leancloud.github.io/js-realtime-sdk/docs/" target="_blank">即时通信 SDK API</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">云引擎</li>
             <li><a href="leanengine_webhosting_guide-node.html">网站托管开发指南</a></li>
@@ -106,7 +106,7 @@
             <li><a href="analytics-guide.html">.NET 统计开发指南</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="unity_guide.html">Unity3D 数据存储开发指南</a></li>
-            <li><a href="realtime-unity.html">Unity3D 实时通信开发指南</a></li>
+            <li><a href="realtime-unity.html">Unity3D 即时通信开发指南</a></li>
             <li><a href="analytics-guide.html">Unity3D 统计开发指南</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="dotnet_push_guide.html">WP8.0 消息推送开发指南</a></li>
@@ -122,7 +122,7 @@
             <li><a href="sdk_setup-python.html">SDK 安装指南</a></li>
             <li><a href="leanstorage_guide-python.html">数据存储开发指南</a></li>
             <li><a href="relation-guide.html">数据模型设计指南</a></li>
-            <li><a href="im-servermgmt-guide-python.html">实时通讯服务端管理开发指南</a></li>
+            <li><a href="im-servermgmt-guide-python.html">即时通信服务端管理开发指南</a></li>
             <li><a href="https://leancloud.readthedocs.io/" target="_blank">SDK API</a></li>
             <li role="separator" class="divider"></li>
             <li class="dropdown-header">云引擎</li>
@@ -159,7 +159,7 @@
             <li><a href="rest_api.html">数据存储 API</a></li>
             <li><a href="leanengine-rest-api.html">云引擎 API</a></li>
             <li><a href="rest_api.html#Push_通知">消息推送 API</a></li>
-            <li><a href="realtime_rest_api_v2.html">实时通信 API</a></li>
+            <li><a href="realtime_rest_api_v2.html">即时通信 API</a></li>
             <li><a href="rest_sms_api.html">短信验证 API</a></li>
             <li><a href="rest_api.html#统计数据_API">数据统计 API</a></li>
             <li><a href="status_system.html#REST_API">应用内社交 API</a></li>
