--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -182,13 +182,13 @@ layout: index.swig
         <!-- end of .section -->
 
         <div class="section">
-          <h2 class="section-title"><span>实时通信</span></h2>
+          <h2 class="section-title"><span>即时通信</span></h2>
           <div class="row">
             <div class="section-content col-xs-12 col-sm-6 col-md-6">
               <h3>开发指南</h3>
               <ul class="list-unstyled">
                 <li><span><a href="start.html">SDK 安装</a></span></li>
-                <li><a href="realtime_v2.html">实时通信服务总览</a></li>
+                <li><a href="realtime_v2.html">即时通信服务总览</a></li>
                 <li> <span>通信基础库开发指南</span>
                   <ul class="list-unstyled tags">
                     <li><a href="realtime_guide-android.html">Android</a></li>
@@ -197,7 +197,7 @@ layout: index.swig
                     <li><a href="realtime-unity.html">Unity3D</a></li>
                   </ul>
                 </li>
-                <li> <span>实时通讯服务端管理开发指南</span>
+                <li> <span>即时通信服务端管理开发指南</span>
                   <ul class="list-unstyled tags">
                     <li><a href="im-servermgmt-guide-python.html">Python</a></li>
                   </ul>
@@ -227,7 +227,7 @@ layout: index.swig
               <ul class="list-unstyled">
                 <li><a href="faq_list.html">常见问题</a></li>
                 <li><a href="error_code.html">错误码详解</a></li>
-                <li><a href="realtime_rest_api_v2.html">实时通信 REST API</a></li>
+                <li><a href="realtime_rest_api_v2.html">即时通信 REST API</a></li>
                 <li><a href="kb-network-connectivity-diagnosis.html">网络连通性诊断流程</a></li>
               </ul>
             </div>
@@ -365,7 +365,7 @@ layout: index.swig
               <ul class="list-unstyled">
                 <li><a href="rest_api.html">数据存储 REST API</a></li>
                 <li><a href="leanengine-rest-api.html">云引擎 REST API</a></li>
-                <li><a href="realtime_rest_api_v2.html">实时通信 REST API</a></li>
+                <li><a href="realtime_rest_api_v2.html">即时通信 REST API</a></li>
                 <li><a href="rest_api.html#Push_通知">消息推送 REST API</a></li>
                 <li><a href="rest_api.html#统计数据_API">移动统计 REST API</a></li>
                 <li><a href="rest_sms_api.html">短信 SMS REST API</a></li>
