--- a/templates/pages/weapp-domains.html
+++ b/templates/pages/weapp-domains.html
@@ -103,7 +103,7 @@ title: 小程序域名白名单配置
           {% for i in arr %}
             <tr>
               {% if loop.first %}
-                <th rowspan="<%= loop.length %>"><strong>socket 域名</strong><small class="help-block mb-0">仅在使用实时通讯功能时需要配置</small><small class="help-block text-warning mb-0">所列出的域名都要添加，缺一不可。</small></th>
+                <th rowspan="<%= loop.length %>"><strong>socket 域名</strong><small class="help-block mb-0">仅在使用即时通信功能时需要配置</small><small class="help-block text-warning mb-0">所列出的域名都要添加，缺一不可。</small></th>
               {% endif %}
               <td><%= area %><%= i %>.leancloud.cn</td>
             </tr>
