--- a/views/_rtm_rest_api_v2_normal.njk
+++ b/views/_rtm_rest_api_v2_normal.njk
@@ -11,8 +11,8 @@ curl -X POST \
   https://{{host}}/1.2/rtm/conversations
 ```
 
-上面的例子会创建一个最简单的对话，包括两个 client ID 为 BillGates 和 SteveJobs 的初始成员。对话创建成功会返回 objectId，即实时通信中的对话 ID，客户端就可以通过这个 ID 发送消息了。新创建的对话可以在 `_Conversation` 表内找到。
-对话的字段可参考实时通信总览里面的 [对话](realtime_v2.html#对话（Conversation）)。
+上面的例子会创建一个最简单的对话，包括两个 client ID 为 BillGates 和 SteveJobs 的初始成员。对话创建成功会返回 objectId，即即时通信中的对话 ID，客户端就可以通过这个 ID 发送消息了。新创建的对话可以在 `_Conversation` 表内找到。
+对话的字段可参考即时通信总览里面的 [对话](realtime_v2.html#对话（Conversation）)。
 传入 `"unique": true` 参数可以保证对话的唯一性。
 
 返回
