chore: unify RTM name

--- a/views/_data.njk
+++ b/views/_data.njk
@@ -38,7 +38,7 @@
     },
     {  
       "name":"conv_id",
-      "description":"选择对话 ID，可选，只在查询即时通信某个对话相关的统计信息时使用。"
+      "description":"选择对话 ID，可选，只在查询即时通讯某个对话相关的统计信息时使用。"
     }
   ] -%}
 参数名|说明
