--- a/views/_rtm_rest_api_v2_chatroom.njk
+++ b/views/_rtm_rest_api_v2_chatroom.njk
@@ -10,7 +10,7 @@ curl -X POST \
   -d '{"name":"My First Chatroom"}' \
   https://{{host}}/1.2/rtm/chatrooms
 ```
-对话的字段可参考即时通信总览里面的 [对话](realtime_v2.html#对话（Conversation）)。
+对话的字段可参考即时通讯总览里面的 [对话](realtime_v2.html#对话（Conversation）)。
 
 返回
 ```
