chore: update nav links
Closes #2715

--- a/views/leanstorage_guide.tmpl
+++ b/views/leanstorage_guide.tmpl
@@ -1094,7 +1094,7 @@ CQL 是 {{productName}} 独创的使用类似 SQL 语法来实现云端查询功
 如果有需要，应用还可以让用户通过下面的方法将匿名用户转化为普通用户：
 
 - 设置用户名、密码后注册
-- 关联第三方平台
+- [关联第三方平台](#第三方账户登录)
 
 以设置用户名、密码后注册为例：
 {% block setup_username_and_password_for_anonymous_user %}{% endblock %}
